fixed visible scrollbars on page load

--- a/desktop/indicators/layout.css
+++ b/desktop/indicators/layout.css
@@ -65,6 +65,7 @@
 html {
   height: 100vh;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 body {
@@ -202,109 +203,4 @@ nav .indicator:not(#datetime) {
   margin-left: 12px;
   margin-right: auto;
   align-self: center;
-}
-
-.popover .item .left img {
-  margin-right: 12px;
-}
-
-.popover .item .right {
-  margin-right: 12px;
-}
-
-.popover .item .header {
-  flex: 1;
-  line-height: 24px;
-}
-
-.icon.left {
-  position: relative;
-  width: 48px;
-  height: 48px;
-  margin-right: 12px;
-
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-#mouse {
-  background-image: url("input-mouse.svg");
-}
-
-#laptop {
-  background-image: url("battery-ac-adapter.svg");
-}
-
-.icon img {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-
-.icon + .right .header {
-  padding-left: 0;
-}
-
-.right {
-  align-self: center;
-}
-
-.menu-item {
-  padding-left: 12px;
-  width: 100%;
-  height: 32px;
-
-  line-height: 32px;
-  text-decoration: none;
-  transition: all 100ms ease-in;
-}
-
-.popover .item ul {
-  display: block;
-  width: 300px;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  overflow-y: auto;
-}
-
-.popover .item ul:last-child {
-  margin-bottom: 0;
-}
-
-#dnd-length {
-  margin-top: 12px;
-  width: 300px;
-}
-
-#dnd-length a.button.left {
-  text-align: center;
-}
-
-.notifications li {
-  padding-left: 36px;
-}
-
-#network-list li {
-  display: flex;
-}
-
-.popover .item li:hover,
-.menu-item:hover {
-  background-color: rgba(0,0,0,0.1);
-}
-
-.popover .item li * {
-  align-self: center;
-  margin-left: 12px;
-}
-
-.popover .item li label {
-  display: inline-block;
-  flex: 1;
-  padding-top: 6px;
-  padding-bottom: 6px;
-}
-
-.popover .item li img {
-  margin-right: 12px;
 }
